--- a/css/sms.css
+++ b/css/sms.css
@@ -16,7 +16,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background: #FFF;
+  background: #9EEA6A;
 }
 a{
   text-decoration: none;
